--- a/nomad-redux/index.html
+++ b/nomad-redux/index.html
@@ -7,15 +7,24 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>count control</h1>
     <button id="plus">plus</button>
     <span>0</span>
     <button id="minus">minus</button>
+
+    <hr />
+    <h1>To Dos</h1>
+    <form>
+      <input type="text" placeholder="Write to do" />
+      <button>Add</button>
+    </form>
+    <ul></ul>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/redux/5.0.0-alpha.0/redux.min.js"
       integrity="sha512-6WJ7yVV5HDZwZ0RT5CM3FCTgTt5qC5BlfQ9bG43y0BowT5a3GXQqDYaoZgCk+i9vuB1Yj6KdBPQAU8Ra7tV32w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="index.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
